# dict_server

./: .gitignore  Pipfile  README.md  __init__.py  azure_speech.py  cmd.sh  config.py  create_langs.py  database.py  log_config.py  main.py  pyproject.toml  req_txt2in.py  requirements-dev.txt  requirements.txt
client/: client_schema.py  client_shcema.py
docker/: Dockerfile  cmd.sh
firebase/: claims.py  helper.py
models/: chat.py  pull.py  report.py  role.py  text2speech.py  translate.py
oxfordstu/: __init__.py  cambridge_parse.py  create_oxfordstu_db.py  idioms_phrases.py  insert_db.py  macmillan_parse.py  model.py  oxfordstu_schema.py  parse_cambridge.py  parse_macmillan.py  parse_oxfordstu.py  thesaurus.py  translate_ch.py
router/: audio.py  chat.py  dict.py  img.py  pay.py  remote_db.py  super.py  translate.py  user.py
services/: auth.py  character.py  dict.py  gcloud.py  runware.py  utils.py
templates/: index.html  reset_password.html
