[project]
name = "dict-server"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "firebase-admin>=7.1.0",
    "google-auth[pyopenssl]>=2.40.3",
    "gtts>=2.5.4",
    "logtail-python>=0.3.3",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydub>=0.25.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "scalar-fastapi>=1.2.3",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
env = [
    "pipenv>=2025.0.4",
]

[dependency-groups]
dev = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "black[d]>=25.1.0",
    "lxml>=6.0.0",
    "mdict-utils>=1.3.14",
    "opencc-python-reimplemented>=0.1.7",
    "pyglet>=2.1.6",
    "pyglossary>=5.1.0",
    "ruamel-yaml>=0.18.14",
    "tqdm>=4.67.1",
]
